--- a/assignment/css/stylesheet.css
+++ b/assignment/css/stylesheet.css
@@ -1,8 +1,54 @@
-body {
-  background-image: url(../record.png);
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-header {
+body {
+  background-image: url(../record.png);
+  background-repeat: repeat;
+  background-size: 15vw;
+}
+
+.title {
   background-color: #555;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-shadow: 2px 2px #000;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  position: relative;
+  height: 20vh;
+}
+
+#titleH1 {
+  padding-top: 0.5em;
+  padding-bottom: 0;
+}
+
+#titleH2 {
+  padding-top: 0;
+  padding-bottom: 0.5em;
+}
+
+main {
+  padding: 1em;
+  position: relative;
+  background-color: #55555580;
+  height: 80vh;
 }
 /*# sourceMappingURL=stylesheet.css.map */
