--- a/assignment/css/stylesheet.css
+++ b/assignment/css/stylesheet.css
@@ -9,6 +9,7 @@ body {
   background-image: url(../record.png);
   background-repeat: repeat;
   background-size: 15vw;
+  margin: 0;
 }
 
 .title {
@@ -38,11 +39,13 @@ body {
 #titleH1 {
   padding-top: 0.5em;
   padding-bottom: 0;
+  font-size: 3em;
 }
 
 #titleH2 {
   padding-top: 0;
   padding-bottom: 0.5em;
+  font-size: 2.5em;
 }
 
 main {
@@ -50,5 +53,8 @@ main {
   position: relative;
   background-color: #55555580;
   height: 80vh;
+  color: #fff;
+  font-size: 2em;
+  text-shadow: 2px 2px #000;
 }
 /*# sourceMappingURL=stylesheet.css.map */
